# aliens-built-this-rag

./: README.md  pyproject.toml
docs/: dinosaurs_built_cities.md  fluoride_mind_control.md  moon_is_hollow.md  pyramids_by_aliens.md  time_travel_jesus.md
rag_bot/: embed.py  rag.py
tests/: test_embed.py  test_rag.py
