[project]
name = "aliens-built-this-rag"
version = "0.1.0"
description = "Using RAGs to override LLMs' prior knowledge with conspiracy theories."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.10"
dependencies = [
    "langchain (>=0.3.25,<0.4.0)",
    "torch (==2.2.2)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "pytest-mock (>=3.14.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
faiss-cpu = "^1.11.0"

